// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  position: relative;
  overflow: hidden;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-3:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-7 {
  position: absolute;
  background-color: var(--bb-palette-info, #000000);
  bottom: 0;
  height: 100%;
  width: 4px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0.5rem 1rem;
  margin-left: 4px;
}

.emotion-14 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
}

.emotion-17 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-18 {
  fill: var(--bb-palette-info, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-20 {
  color: var(--bb-palette-info, #000000)!important;
  font-size: 1rem!important;
}

.emotion-30.emotion-30 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-31 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-31[disabled],
.emotion-31[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-31:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-31:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-31:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-31 {
  background-color: unset;
  border: unset;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  box-shadow: unset;
}

.emotion-31:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.emotion-31:hover:active {
  background-color: rgba(0, 0, 0, 0.1);
}

.emotion-35 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-37 {
  font-size: 1.25rem!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 emotion-3 emotion-4 test bb-Box bb-Flex bb-Alert bb-Toast"
  role="alert"
>
  <div
    class="emotion-3 emotion-6 emotion-7 bb-AlertAccent bb-Box"
  />
  <div
    class="emotion-2 emotion-3 emotion-6 emotion-11 bb-AlertWrapper bb-Box bb-Flex"
  >
    <div
      class="emotion-2 emotion-3 emotion-14 bb-Box bb-Flex"
    >
      <div
        class="emotion-3 emotion-6 emotion-17 bb-AlertIconWrapper bb-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-18 emotion-3 emotion-20 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-3 emotion-6 emotion-23 bb-AlertContent bb-Box"
      >
        <div
          class="emotion-3 emotion-6 emotion-0 bb-AlertDescription bb-Box"
          id="id-test"
        >
          hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-6 bb-Box bb-Flex"
    >
      <button
        class="emotion-30 emotion-31 emotion-3 emotion-6 emotion-34 bb-AlertCloseButton bb-Box bb-Button bb-ButtonClose"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-35 emotion-3 emotion-37 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`overrides Toast.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  position: relative;
  overflow: hidden;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-3:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  position: absolute;
  background-color: var(--bb-palette-info, #000000);
  bottom: 0;
  height: 100%;
  width: 4px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0.5rem 1rem;
  margin-left: 4px;
}

.emotion-14 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
}

.emotion-17 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-18 {
  fill: var(--bb-palette-info, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-20 {
  color: var(--bb-palette-info, #000000)!important;
  font-size: 1rem!important;
}

.emotion-30.emotion-30 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-31 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-31[disabled],
.emotion-31[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-31:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-31:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-31:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-31 {
  background-color: unset;
  border: unset;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  box-shadow: unset;
}

.emotion-31:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.emotion-31:hover:active {
  background-color: rgba(0, 0, 0, 0.1);
}

.emotion-35 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-37 {
  font-size: 1.25rem!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 emotion-3 emotion-4 bb-Box bb-Flex bb-Alert bb-Toast"
  role="alert"
>
  <div
    class="emotion-3 emotion-4 emotion-7 bb-AlertAccent bb-Box"
  />
  <div
    class="emotion-2 emotion-3 emotion-4 emotion-11 bb-AlertWrapper bb-Box bb-Flex"
  >
    <div
      class="emotion-2 emotion-3 emotion-14 bb-Box bb-Flex"
    >
      <div
        class="emotion-3 emotion-4 emotion-17 bb-AlertIconWrapper bb-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-18 emotion-3 emotion-20 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-3 emotion-4 emotion-23 bb-AlertContent bb-Box"
      >
        <div
          class="emotion-3 emotion-4 emotion-26 bb-AlertDescription bb-Box"
          id="id-test"
        >
          hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4 bb-Box bb-Flex"
    >
      <button
        class="emotion-30 emotion-31 emotion-3 emotion-4 emotion-34 bb-AlertCloseButton bb-Box bb-Button bb-ButtonClose"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-35 emotion-3 emotion-37 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  position: relative;
  overflow: hidden;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-3:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  position: absolute;
  background-color: var(--bb-palette-info, #000000);
  bottom: 0;
  height: 100%;
  width: 4px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0.5rem 1rem;
  margin-left: 4px;
}

.emotion-14 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
}

.emotion-17 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-18 {
  fill: var(--bb-palette-info, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-20 {
  color: var(--bb-palette-info, #000000)!important;
  font-size: 1rem!important;
}

.emotion-30.emotion-30 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-31 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-31[disabled],
.emotion-31[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-31:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-31:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-31:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-31 {
  background-color: unset;
  border: unset;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  box-shadow: unset;
}

.emotion-31:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.emotion-31:hover:active {
  background-color: rgba(0, 0, 0, 0.1);
}

.emotion-35 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-37 {
  font-size: 1.25rem!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 emotion-3 emotion-4 bb-Box bb-Flex bb-Alert bb-Toast"
  role="alert"
>
  <div
    class="emotion-3 emotion-4 emotion-7 bb-AlertAccent bb-Box"
  />
  <div
    class="emotion-2 emotion-3 emotion-4 emotion-11 bb-AlertWrapper bb-Box bb-Flex"
  >
    <div
      class="emotion-2 emotion-3 emotion-14 bb-Box bb-Flex"
    >
      <div
        class="emotion-3 emotion-4 emotion-17 bb-AlertIconWrapper bb-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-18 emotion-3 emotion-20 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-3 emotion-4 emotion-23 bb-AlertContent bb-Box"
      >
        <div
          class="emotion-3 emotion-4 emotion-0 bb-AlertDescription bb-Box"
          id="id-test"
        >
          Hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4 bb-Box bb-Flex"
    >
      <button
        class="emotion-30 emotion-31 emotion-3 emotion-4 emotion-34 bb-AlertCloseButton bb-Box bb-Button bb-ButtonClose"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-35 emotion-3 emotion-37 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  position: relative;
  overflow: hidden;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-3:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-7 {
  position: absolute;
  background-color: var(--bb-palette-info, #000000);
  bottom: 0;
  height: 100%;
  width: 4px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0.5rem 1rem;
  margin-left: 4px;
}

.emotion-14 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
}

.emotion-17 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-18 {
  fill: var(--bb-palette-info, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-20 {
  color: var(--bb-palette-info, #000000)!important;
  font-size: 1rem!important;
}

.emotion-30.emotion-30 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-31 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-31[disabled],
.emotion-31[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-31:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-31:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-31:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-31 {
  background-color: unset;
  border: unset;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  box-shadow: unset;
}

.emotion-31:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.emotion-31:hover:active {
  background-color: rgba(0, 0, 0, 0.1);
}

.emotion-35 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-37 {
  font-size: 1.25rem!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 emotion-3 emotion-4 bb-Box bb-Flex bb-Alert bb-Toast"
  role="alert"
>
  <div
    class="emotion-3 emotion-6 emotion-7 bb-AlertAccent bb-Box"
  />
  <div
    class="emotion-2 emotion-3 emotion-6 emotion-11 bb-AlertWrapper bb-Box bb-Flex"
  >
    <div
      class="emotion-2 emotion-3 emotion-14 bb-Box bb-Flex"
    >
      <div
        class="emotion-3 emotion-6 emotion-17 bb-AlertIconWrapper bb-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-18 emotion-3 emotion-20 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-3 emotion-6 emotion-23 bb-AlertContent bb-Box"
      >
        <div
          class="emotion-3 emotion-6 emotion-0 bb-AlertDescription bb-Box"
          id="id-test"
        >
          Hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-6 bb-Box bb-Flex"
    >
      <button
        class="emotion-30 emotion-31 emotion-3 emotion-6 emotion-34 bb-AlertCloseButton bb-Box bb-Button bb-ButtonClose"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-35 emotion-3 emotion-37 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`props should render correctly with a countdown 1`] = `
@keyframes animation-0 {
  from {
    height: 100%;
  }

  to {
    height: 0%;
  }
}

.emotion-1 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  position: relative;
  overflow: hidden;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-3:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  position: absolute;
  background-color: var(--bb-palette-info, #000000);
  bottom: 0;
  height: 100%;
  width: 4px;
  -webkit-animation: animation-0 5000ms linear forwards;
  animation: animation-0 5000ms linear forwards;
}

.emotion-10 {
  position: absolute;
  background-color: var(--bb-palette-info, #000000);
  bottom: 0;
  height: 100%;
  width: 4px;
  opacity: 0.3;
  left: 0;
}

.emotion-14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0.5rem 1rem;
  margin-left: 4px;
}

.emotion-17 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
}

.emotion-20 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-21 {
  fill: var(--bb-palette-info, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-23 {
  color: var(--bb-palette-info, #000000)!important;
  font-size: 1rem!important;
}

.emotion-33.emotion-33 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-34 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-34[disabled],
.emotion-34[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-34:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-34:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-34:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-34 {
  background-color: unset;
  border: unset;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  box-shadow: unset;
}

.emotion-34:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.emotion-34:hover:active {
  background-color: rgba(0, 0, 0, 0.1);
}

.emotion-38 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-40 {
  font-size: 1.25rem!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 emotion-3 emotion-4 bb-Box bb-Flex bb-Alert bb-Toast"
  role="alert"
>
  <div
    class="emotion-3 emotion-4 emotion-7 bb-AlertAccent bb-Box"
  />
  <div
    class="emotion-3 emotion-4 emotion-10 bb-AlertAccent bb-Box"
  />
  <div
    class="emotion-2 emotion-3 emotion-4 emotion-14 bb-AlertWrapper bb-Box bb-Flex"
  >
    <div
      class="emotion-2 emotion-3 emotion-17 bb-Box bb-Flex"
    >
      <div
        class="emotion-3 emotion-4 emotion-20 bb-AlertIconWrapper bb-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-21 emotion-3 emotion-23 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-3 emotion-4 emotion-26 bb-AlertContent bb-Box"
      >
        <div
          class="emotion-3 emotion-4 emotion-0 bb-AlertDescription bb-Box"
          id="id-test"
        >
          Hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4 bb-Box bb-Flex"
    >
      <button
        class="emotion-33 emotion-34 emotion-3 emotion-4 emotion-37 bb-AlertCloseButton bb-Box bb-Button bb-ButtonClose"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-38 emotion-3 emotion-40 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`theming Toast.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  position: relative;
  overflow: hidden;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-3:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  position: absolute;
  background-color: var(--bb-palette-info, #000000);
  bottom: 0;
  height: 100%;
  width: 4px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0.5rem 1rem;
  margin-left: 4px;
}

.emotion-14 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
}

.emotion-17 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-18 {
  fill: var(--bb-palette-info, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-20 {
  color: var(--bb-palette-info, #000000)!important;
  font-size: 1rem!important;
}

.emotion-30.emotion-30 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-31 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-31[disabled],
.emotion-31[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-31:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-31:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-31:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-31 {
  background-color: unset;
  border: unset;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  box-shadow: unset;
}

.emotion-31:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.emotion-31:hover:active {
  background-color: rgba(0, 0, 0, 0.1);
}

.emotion-35 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-37 {
  font-size: 1.25rem!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 emotion-3 emotion-4 bb-Box bb-Flex bb-Alert bb-Toast"
  role="alert"
>
  <div
    class="emotion-3 emotion-4 emotion-7 bb-AlertAccent bb-Box"
  />
  <div
    class="emotion-2 emotion-3 emotion-4 emotion-11 bb-AlertWrapper bb-Box bb-Flex"
  >
    <div
      class="emotion-2 emotion-3 emotion-14 bb-Box bb-Flex"
    >
      <div
        class="emotion-3 emotion-4 emotion-17 bb-AlertIconWrapper bb-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-18 emotion-3 emotion-20 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-3 emotion-4 emotion-23 bb-AlertContent bb-Box"
      >
        <div
          class="emotion-3 emotion-4 emotion-26 bb-AlertDescription bb-Box"
          id="id-test"
        >
          hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4 bb-Box bb-Flex"
    >
      <button
        class="emotion-30 emotion-31 emotion-3 emotion-4 emotion-34 bb-AlertCloseButton bb-Box bb-Button bb-ButtonClose"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-35 emotion-3 emotion-37 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  background-color: var(--bb-palette-background, #000000);
  border-radius: 6px;
  position: relative;
  overflow: hidden;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-3:focus:not(:focus-visible) {
  outline: none;
}

.emotion-7 {
  position: absolute;
  background-color: var(--bb-palette-info, #000000);
  bottom: 0;
  height: 100%;
  width: 4px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0.5rem 1rem;
  margin-left: 4px;
}

.emotion-14 {
  -webkit-align-items: center!important;
  -webkit-box-align: center!important;
  -ms-flex-align: center!important;
  align-items: center!important;
}

.emotion-17 {
  line-height: 0.9;
  margin-right: 1rem;
}

.emotion-18 {
  fill: var(--bb-palette-info, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-20 {
  color: var(--bb-palette-info, #000000)!important;
  font-size: 1rem!important;
}

.emotion-30.emotion-30 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-31 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-31[disabled],
.emotion-31[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-31:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-31:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-31:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-31 {
  background-color: unset;
  border: unset;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  box-shadow: unset;
}

.emotion-31:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.emotion-31:hover:active {
  background-color: rgba(0, 0, 0, 0.1);
}

.emotion-35 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-37 {
  font-size: 1.25rem!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 emotion-3 emotion-4 bb-Box bb-Flex bb-Alert bb-Toast"
  role="alert"
>
  <div
    class="emotion-3 emotion-4 emotion-7 bb-AlertAccent bb-Box"
  />
  <div
    class="emotion-2 emotion-3 emotion-4 emotion-11 bb-AlertWrapper bb-Box bb-Flex"
  >
    <div
      class="emotion-2 emotion-3 emotion-14 bb-Box bb-Flex"
    >
      <div
        class="emotion-3 emotion-4 emotion-17 bb-AlertIconWrapper bb-Box"
      >
        <svg
          aria-hidden="true"
          class="emotion-18 emotion-3 emotion-20 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="emotion-3 emotion-4 emotion-23 bb-AlertContent bb-Box"
      >
        <div
          class="emotion-3 emotion-4 emotion-26 bb-AlertDescription bb-Box"
          id="id-test"
        >
          hello world
        </div>
      </div>
    </div>
    <div
      class="emotion-2 emotion-3 emotion-4 bb-Box bb-Flex"
    >
      <button
        class="emotion-30 emotion-31 emotion-3 emotion-4 emotion-34 bb-AlertCloseButton bb-Box bb-Button bb-ButtonClose"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="emotion-35 emotion-3 emotion-37 bb-Box bb-Icon"
          role="img"
          viewBox="0 0 320 512"
        >
          <path
            d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
        >
          Close
        </span>
      </button>
    </div>
  </div>
</div>
`;
